--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
   "singleQuote": false,
   "arrowParens": "always",
   "useTabs": false,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "singleAttributePerLine": true
 }
